# Avaliacoes_Portais_Crawler

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  teste.csv
src/contract/: schema.py
src/cookies/: driver.py  login.py  twoFA.py
src/crawler/portal_reviews/: parser.py  request.py
src/load/: google_drive.py
