[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "AngeloGagno",email = "angelogagno@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "selenium (>=4.32.0,<5.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydrive2 (>=1.21.3,<2.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "pydantic (>=2.11.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
